--- a/index.html
+++ b/index.html
@@ -7,13 +7,13 @@
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link href="https://fonts.googleapis.com/css2?family=Bai+Jamjuree:wght@400;600&display=swap" rel="stylesheet"/>
-    <link rel="stylesheet" href="css/style.css" />
+    <link rel="stylesheet" href="dist/css/style.css" />
     <title>Clippy | Clipboard evolved</title>
   </head>
   <body>
   <section id="hero">
    <div class="section-container mb-40 px-10 pt-10">
-     <img src="./images/logo.svg" alt="logo image" class="mx-auto my-16">
+     <img src="dist/images/logo.svg" alt="logo image" class="mx-auto my-16">
      <h3>Keep everything that you copy, forever.</h3>
      <p class="max-w-4xl mx-auto mb-10 text-2xl text-grayishBlue">Clippy allows you to track and organize your clipboard and syncs between devices.</p>
      <div class="button-container">
@@ -27,7 +27,7 @@
      <div class="section-container my-20 px-10">
        <h3>Keep track of all of your snippets.</h3>
        <p class="max-w-3xl mx-auto mb-24 text-xl leading-9 text-center text-grayishBlue">
-         Clipboard instantly stores any item you copy in the cloud, meaning you
+         Clippy instantly stores any item you copy in the cloud, meaning you
          can access your snippets immediately on all your devices. Our Mac and
          iOS apps will help you organize everything.
        </p>
@@ -38,7 +38,7 @@
     <div class="section-container my-20">
       <div class="relative flex flex-col md:flex-row md:space-x-32">
         <div class="md:w-1/2">
-          <img src="images/image-computer.png" alt="computer image with a green checkmark" class="md:absolute top-0 right-[50%]">
+          <img src="dist/images/image-computer.png" alt="computer image with a green checkmark" class="md:absolute top-0 right-[50%]">
         </div>
 
         <div class="flex flex-col mt-16 mb-24 space-y-12 text-xl md:w-1/2 md:mb-60 md:text-left md:pl-16">
@@ -64,9 +64,9 @@
 
   <section id="access">
     <div class="section-container my-20">
-      <h3>Access Clipboard Anywhere</h3>
+      <h3>Access Clippy Anywhere</h3>
       <p class="section-content mb-24 text-xl">Whether you’re on the go, or at your computer, you can access all your Clipboard snippets in a few simple clicks.</p>
-      <img src="images/image-devices.png" alt="" class="mx-auto" />
+      <img src="dist/images/image-devices.png" alt="" class="mx-auto" />
     </div>
   </section>
 
@@ -76,19 +76,19 @@
       <p class="section-content mb-16 text-xl">We've got the tools to boost your productivity.</p>
       <div class="flex flex-col items-center justify-between space-y-16 md:flex-row md:space-y-0 md:space-x-12">
         <div class="flex flex-col items-center space-y-5">
-          <img src="images/icon-blacklist.svg" alt="" class="mb-6" />
+          <img src="dist/images/icon-blacklist.svg" alt="" class="mb-6" />
           <h5>Create Blacklists</h5>
           <p class="max-w-md text-grayishBlue">Easily search your snippets by content, category, web address, application, and more.</p>
         </div>
 
         <div class="flex flex-col items-center space-y-5">
-          <img src="images/icon-text.svg" alt="" class="mb-6" />
+          <img src="dist/images/icon-text.svg" alt="" class="mb-6" />
           <h5>Plain Text Snippets</h5>
           <p class="max-w-md text-grayishBlue">Remove unwanted formatting from copied text for a consistent look.</p>
         </div>
 
         <div class="flex flex-col items-center space-y-5">
-          <img src="images/icon-preview.svg" alt="" class="mb-6" />
+          <img src="dist/images/icon-preview.svg" alt="" class="mb-6" />
           <h5>Sneak Preview</h5>
           <p class="max-w-md text-grayishBlue">Quick preview of all snippets on your Clipboard for easy access.</p>
         </div>
@@ -99,17 +99,17 @@
   <!-- References Section -->
   <section id="references">
     <div class="flex flex-col items-center justify-between max-w-6xl px-10 mx-auto space-y-16 my-44 md:flex-row md:space-y-0">
-      <img src="images/logo-google.png" alt="" />
-      <img src="images/logo-ibm.png" alt="" />
-      <img src="images/logo-microsoft.png" alt="" />
-      <img src="images/logo-hp.png" alt="" />
-      <img src="images/logo-vector-graphics.png" alt="" />
+      <img src="dist/images/logo-google.png" alt="" />
+      <img src="dist/images/logo-ibm.png" alt="" />
+      <img src="dist/images/logo-microsoft.png" alt="" />
+      <img src="dist/images/logo-hp.png" alt="" />
+      <img src="dist/images/logo-vector-graphics.png" alt="" />
     </div>
   </section>
 
   <section id="bottom">
     <div class="section-container my-20">
-      <h3>Clipboard for iOS and MacOS</h3>
+      <h3>Clippy for iOS and MacOS</h3>
       <p class="section-content mb-10 text-xl">Available for free on the App Store. Download for Mac or iOS, sync with iCloud,and you're ready to start adding to your clipboard.
       </p>
 
@@ -123,7 +123,7 @@
   <footer class="bg-gray-50">
     <div class="section-container">
       <div class="flex flex-col items-center justify-between md:flex-row">
-        <img src="images/logo.svg" alt="" class="scale-50" />
+        <img src="dist/images/logo.svg" alt="" class="scale-50" />
         <div class="flex flex-col items-center justify-between flex-1 mb-10 space-y-6 md:flex-row md:mb-0 md:space-y-0 text-grayishBlue">
           <div class="flex flex-col space-y-4 md:flex-row md:ml-24 md:space-x-24 md:space-y-0">
             <div class="flex flex-col space-y-4 text-center md:text-left">
@@ -147,9 +147,9 @@
             </div>
           </div>
           <div class="flex justify-between w-32 py-1">
-            <a href="#"><img src="images/icon-facebook.svg" alt="" class="duration-200 ficon"/></a>
-            <a href="#"><img src="images/icon-twitter.svg" alt="" class="duration-200 ficon"/></a>
-            <a href="#"><img src="images/icon-instagram.svg" alt="" class="duration-200 ficon"/></a>
+            <a href="#"><img src="dist/images/icon-facebook.svg" alt="" class="duration-200 ficon"/></a>
+            <a href="#"><img src="dist/images/icon-twitter.svg" alt="" class="duration-200 ficon"/></a>
+            <a href="#"><img src="dist/images/icon-instagram.svg" alt="" class="duration-200 ficon"/></a>
           </div>
         </div>
       </div>
